// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#buildSinkUsesBucketRelationships should collect data 1`] = `
{
  "collectedEntities": [
    {
      "_class": [
        "DataStore",
      ],
      "_key": "bucket:dataproc-staging-europe-north1-167984947943-oqqo30p7",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "etag": "CAE=",
            "iamConfiguration": {
              "bucketPolicyOnly": {
                "enabled": false,
              },
              "publicAccessPrevention": "inherited",
              "uniformBucketLevelAccess": {
                "enabled": false,
              },
            },
            "id": "dataproc-staging-europe-north1-167984947943-oqqo30p7",
            "kind": "storage#bucket",
            "location": "EUROPE-NORTH1",
            "locationType": "region",
            "metageneration": "1",
            "name": "dataproc-staging-europe-north1-167984947943-oqqo30p7",
            "projectNumber": "167984947943",
            "selfLink": "https://www.googleapis.com/storage/v1/b/dataproc-staging-europe-north1-167984947943-oqqo30p7",
            "storageClass": "STANDARD",
            "timeCreated": "2021-07-20T12:47:31.280Z",
            "updated": "2021-07-20T12:47:31.280Z",
          },
        },
      ],
      "_type": "google_storage_bucket",
      "access": "Not public",
      "classification": null,
      "createdOn": 1626785251280,
      "displayName": "dataproc-staging-europe-north1-167984947943-oqqo30p7",
      "encrypted": true,
      "encryptionKeyRef": undefined,
      "etag": "CAE=",
      "id": "dataproc-staging-europe-north1-167984947943-oqqo30p7",
      "kmsKeyName": undefined,
      "location": "EUROPE-NORTH1",
      "name": "dataproc-staging-europe-north1-167984947943-oqqo30p7",
      "public": false,
      "retentionDate": undefined,
      "retentionPeriod": undefined,
      "retentionPolicyEnabled": undefined,
      "storageClass": "STANDARD",
      "uniformBucketLevelAccess": false,
      "updatedOn": 1626785251280,
      "versioningEnabled": false,
      "webLink": "https://console.cloud.google.com/storage/browser/dataproc-staging-europe-north1-167984947943-oqqo30p7;tab=objects?forceOnBucketsSortingFiltering=false&project=j1-gc-integration-dev-v3",
    },
    {
      "_class": [
        "DataStore",
      ],
      "_key": "bucket:dataproc-staging-us-central1-167984947943-okmnuod7",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "etag": "CAc=",
            "iamConfiguration": {
              "bucketPolicyOnly": {
                "enabled": false,
              },
              "publicAccessPrevention": "inherited",
              "uniformBucketLevelAccess": {
                "enabled": false,
              },
            },
            "id": "dataproc-staging-us-central1-167984947943-okmnuod7",
            "kind": "storage#bucket",
            "location": "US-CENTRAL1",
            "locationType": "region",
            "metageneration": "7",
            "name": "dataproc-staging-us-central1-167984947943-okmnuod7",
            "projectNumber": "167984947943",
            "selfLink": "https://www.googleapis.com/storage/v1/b/dataproc-staging-us-central1-167984947943-okmnuod7",
            "storageClass": "STANDARD",
            "timeCreated": "2021-07-20T12:47:10.911Z",
            "updated": "2021-09-08T17:19:48.039Z",
          },
        },
      ],
      "_type": "google_storage_bucket",
      "access": "Not public",
      "classification": null,
      "createdOn": 1626785230911,
      "displayName": "dataproc-staging-us-central1-167984947943-okmnuod7",
      "encrypted": true,
      "encryptionKeyRef": undefined,
      "etag": "CAc=",
      "id": "dataproc-staging-us-central1-167984947943-okmnuod7",
      "kmsKeyName": undefined,
      "location": "US-CENTRAL1",
      "name": "dataproc-staging-us-central1-167984947943-okmnuod7",
      "public": false,
      "retentionDate": undefined,
      "retentionPeriod": undefined,
      "retentionPolicyEnabled": undefined,
      "storageClass": "STANDARD",
      "uniformBucketLevelAccess": false,
      "updatedOn": 1631121588039,
      "versioningEnabled": false,
      "webLink": "https://console.cloud.google.com/storage/browser/dataproc-staging-us-central1-167984947943-okmnuod7;tab=objects?forceOnBucketsSortingFiltering=false&project=j1-gc-integration-dev-v3",
    },
    {
      "_class": [
        "DataStore",
      ],
      "_key": "bucket:dataproc-temp-europe-north1-167984947943-0quq0oz0",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "etag": "CAE=",
            "iamConfiguration": {
              "bucketPolicyOnly": {
                "enabled": false,
              },
              "publicAccessPrevention": "inherited",
              "uniformBucketLevelAccess": {
                "enabled": false,
              },
            },
            "id": "dataproc-temp-europe-north1-167984947943-0quq0oz0",
            "kind": "storage#bucket",
            "lifecycle": {
              "rule": [
                {
                  "action": {
                    "type": "Delete",
                  },
                  "condition": {
                    "age": 90,
                  },
                },
              ],
            },
            "location": "EUROPE-NORTH1",
            "locationType": "region",
            "metageneration": "1",
            "name": "dataproc-temp-europe-north1-167984947943-0quq0oz0",
            "projectNumber": "167984947943",
            "selfLink": "https://www.googleapis.com/storage/v1/b/dataproc-temp-europe-north1-167984947943-0quq0oz0",
            "storageClass": "STANDARD",
            "timeCreated": "2021-07-20T12:47:31.407Z",
            "updated": "2021-07-20T12:47:31.407Z",
          },
        },
      ],
      "_type": "google_storage_bucket",
      "access": "Not public",
      "classification": null,
      "createdOn": 1626785251407,
      "displayName": "dataproc-temp-europe-north1-167984947943-0quq0oz0",
      "encrypted": true,
      "encryptionKeyRef": undefined,
      "etag": "CAE=",
      "id": "dataproc-temp-europe-north1-167984947943-0quq0oz0",
      "kmsKeyName": undefined,
      "location": "EUROPE-NORTH1",
      "name": "dataproc-temp-europe-north1-167984947943-0quq0oz0",
      "public": false,
      "retentionDate": undefined,
      "retentionPeriod": undefined,
      "retentionPolicyEnabled": undefined,
      "storageClass": "STANDARD",
      "uniformBucketLevelAccess": false,
      "updatedOn": 1626785251407,
      "versioningEnabled": false,
      "webLink": "https://console.cloud.google.com/storage/browser/dataproc-temp-europe-north1-167984947943-0quq0oz0;tab=objects?forceOnBucketsSortingFiltering=false&project=j1-gc-integration-dev-v3",
    },
    {
      "_class": [
        "DataStore",
      ],
      "_key": "bucket:dataproc-temp-us-central1-167984947943-c8nlqeyo",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "etag": "CAE=",
            "iamConfiguration": {
              "bucketPolicyOnly": {
                "enabled": false,
              },
              "publicAccessPrevention": "inherited",
              "uniformBucketLevelAccess": {
                "enabled": false,
              },
            },
            "id": "dataproc-temp-us-central1-167984947943-c8nlqeyo",
            "kind": "storage#bucket",
            "lifecycle": {
              "rule": [
                {
                  "action": {
                    "type": "Delete",
                  },
                  "condition": {
                    "age": 90,
                  },
                },
              ],
            },
            "location": "US-CENTRAL1",
            "locationType": "region",
            "metageneration": "1",
            "name": "dataproc-temp-us-central1-167984947943-c8nlqeyo",
            "projectNumber": "167984947943",
            "selfLink": "https://www.googleapis.com/storage/v1/b/dataproc-temp-us-central1-167984947943-c8nlqeyo",
            "storageClass": "STANDARD",
            "timeCreated": "2021-07-20T12:47:10.793Z",
            "updated": "2021-07-20T12:47:10.793Z",
          },
        },
      ],
      "_type": "google_storage_bucket",
      "access": "Not public",
      "classification": null,
      "createdOn": 1626785230793,
      "displayName": "dataproc-temp-us-central1-167984947943-c8nlqeyo",
      "encrypted": true,
      "encryptionKeyRef": undefined,
      "etag": "CAE=",
      "id": "dataproc-temp-us-central1-167984947943-c8nlqeyo",
      "kmsKeyName": undefined,
      "location": "US-CENTRAL1",
      "name": "dataproc-temp-us-central1-167984947943-c8nlqeyo",
      "public": false,
      "retentionDate": undefined,
      "retentionPeriod": undefined,
      "retentionPolicyEnabled": undefined,
      "storageClass": "STANDARD",
      "uniformBucketLevelAccess": false,
      "updatedOn": 1626785230793,
      "versioningEnabled": false,
      "webLink": "https://console.cloud.google.com/storage/browser/dataproc-temp-us-central1-167984947943-c8nlqeyo;tab=objects?forceOnBucketsSortingFiltering=false&project=j1-gc-integration-dev-v3",
    },
    {
      "_class": [
        "DataStore",
      ],
      "_key": "bucket:example-backend-bucket-1",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "defaultEventBasedHold": false,
            "etag": "CAE=",
            "iamConfiguration": {
              "bucketPolicyOnly": {
                "enabled": true,
                "lockedTime": "2022-06-14T11:31:39.964Z",
              },
              "publicAccessPrevention": "enforced",
              "uniformBucketLevelAccess": {
                "enabled": true,
                "lockedTime": "2022-06-14T11:31:39.964Z",
              },
            },
            "id": "example-backend-bucket-1",
            "kind": "storage#bucket",
            "location": "US",
            "locationType": "multi-region",
            "metageneration": "1",
            "name": "example-backend-bucket-1",
            "projectNumber": "167984947943",
            "rpo": "DEFAULT",
            "satisfiesPZS": false,
            "selfLink": "https://www.googleapis.com/storage/v1/b/example-backend-bucket-1",
            "storageClass": "STANDARD",
            "timeCreated": "2022-03-16T11:31:39.964Z",
            "updated": "2022-03-16T11:31:39.964Z",
          },
        },
      ],
      "_type": "google_storage_bucket",
      "access": "Not public",
      "classification": null,
      "createdOn": 1647430299964,
      "displayName": "example-backend-bucket-1",
      "encrypted": true,
      "encryptionKeyRef": undefined,
      "etag": "CAE=",
      "id": "example-backend-bucket-1",
      "kmsKeyName": undefined,
      "location": "US",
      "name": "example-backend-bucket-1",
      "public": false,
      "retentionDate": undefined,
      "retentionPeriod": undefined,
      "retentionPolicyEnabled": undefined,
      "storageClass": "STANDARD",
      "uniformBucketLevelAccess": true,
      "updatedOn": 1647430299964,
      "versioningEnabled": false,
      "webLink": "https://console.cloud.google.com/storage/browser/example-backend-bucket-1;tab=objects?forceOnBucketsSortingFiltering=false&project=j1-gc-integration-dev-v3",
    },
    {
      "_class": [
        "DataStore",
      ],
      "_key": "bucket:gcf-sources-167984947943-us-central1",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "cors": [
              {
                "method": [
                  "GET",
                ],
                "origin": [
                  "https://*.cloud.google.com",
                  "https://*.corp.google.com",
                  "https://*.corp.google.com:*",
                ],
              },
            ],
            "etag": "CAE=",
            "iamConfiguration": {
              "bucketPolicyOnly": {
                "enabled": true,
                "lockedTime": "2021-08-29T16:26:23.272Z",
              },
              "publicAccessPrevention": "inherited",
              "uniformBucketLevelAccess": {
                "enabled": true,
                "lockedTime": "2021-08-29T16:26:23.272Z",
              },
            },
            "id": "gcf-sources-167984947943-us-central1",
            "kind": "storage#bucket",
            "location": "US-CENTRAL1",
            "locationType": "region",
            "metageneration": "1",
            "name": "gcf-sources-167984947943-us-central1",
            "projectNumber": "167984947943",
            "selfLink": "https://www.googleapis.com/storage/v1/b/gcf-sources-167984947943-us-central1",
            "storageClass": "STANDARD",
            "timeCreated": "2021-05-31T16:26:23.272Z",
            "updated": "2021-05-31T16:26:23.272Z",
          },
        },
      ],
      "_type": "google_storage_bucket",
      "access": "Not public",
      "classification": null,
      "createdOn": 1622478383272,
      "displayName": "gcf-sources-167984947943-us-central1",
      "encrypted": true,
      "encryptionKeyRef": undefined,
      "etag": "CAE=",
      "id": "gcf-sources-167984947943-us-central1",
      "kmsKeyName": undefined,
      "location": "US-CENTRAL1",
      "name": "gcf-sources-167984947943-us-central1",
      "public": false,
      "retentionDate": undefined,
      "retentionPeriod": undefined,
      "retentionPolicyEnabled": undefined,
      "storageClass": "STANDARD",
      "uniformBucketLevelAccess": true,
      "updatedOn": 1622478383272,
      "versioningEnabled": false,
      "webLink": "https://console.cloud.google.com/storage/browser/gcf-sources-167984947943-us-central1;tab=objects?forceOnBucketsSortingFiltering=false&project=j1-gc-integration-dev-v3",
    },
    {
      "_class": [
        "DataStore",
      ],
      "_key": "bucket:j1-gc-integration-dev-v3-sink-logging-bucket",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "etag": "CAE=",
            "iamConfiguration": {
              "bucketPolicyOnly": {
                "enabled": false,
              },
              "publicAccessPrevention": "inherited",
              "uniformBucketLevelAccess": {
                "enabled": false,
              },
            },
            "id": "j1-gc-integration-dev-v3-sink-logging-bucket",
            "kind": "storage#bucket",
            "location": "US",
            "locationType": "multi-region",
            "metageneration": "1",
            "name": "j1-gc-integration-dev-v3-sink-logging-bucket",
            "projectNumber": "167984947943",
            "rpo": "DEFAULT",
            "selfLink": "https://www.googleapis.com/storage/v1/b/j1-gc-integration-dev-v3-sink-logging-bucket",
            "storageClass": "STANDARD",
            "timeCreated": "2021-05-31T16:25:51.614Z",
            "updated": "2021-05-31T16:25:51.614Z",
          },
        },
      ],
      "_type": "google_storage_bucket",
      "access": "Not public",
      "classification": null,
      "createdOn": 1622478351614,
      "displayName": "j1-gc-integration-dev-v3-sink-logging-bucket",
      "encrypted": true,
      "encryptionKeyRef": undefined,
      "etag": "CAE=",
      "id": "j1-gc-integration-dev-v3-sink-logging-bucket",
      "kmsKeyName": undefined,
      "location": "US",
      "name": "j1-gc-integration-dev-v3-sink-logging-bucket",
      "public": false,
      "retentionDate": undefined,
      "retentionPeriod": undefined,
      "retentionPolicyEnabled": undefined,
      "storageClass": "STANDARD",
      "uniformBucketLevelAccess": false,
      "updatedOn": 1622478351614,
      "versioningEnabled": false,
      "webLink": "https://console.cloud.google.com/storage/browser/j1-gc-integration-dev-v3-sink-logging-bucket;tab=objects?forceOnBucketsSortingFiltering=false&project=j1-gc-integration-dev-v3",
    },
    {
      "_class": [
        "DataStore",
      ],
      "_key": "bucket:j1-gc-integration-dev-v3-super-secret-stuff",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "defaultEventBasedHold": false,
            "etag": "CAw=",
            "iamConfiguration": {
              "bucketPolicyOnly": {
                "enabled": false,
              },
              "publicAccessPrevention": "inherited",
              "uniformBucketLevelAccess": {
                "enabled": false,
              },
            },
            "id": "j1-gc-integration-dev-v3-super-secret-stuff",
            "kind": "storage#bucket",
            "location": "US",
            "locationType": "multi-region",
            "metageneration": "12",
            "name": "j1-gc-integration-dev-v3-super-secret-stuff",
            "projectNumber": "167984947943",
            "rpo": "DEFAULT",
            "satisfiesPZS": false,
            "selfLink": "https://www.googleapis.com/storage/v1/b/j1-gc-integration-dev-v3-super-secret-stuff",
            "storageClass": "STANDARD",
            "timeCreated": "2021-09-13T22:56:02.534Z",
            "updated": "2021-10-27T18:29:52.571Z",
          },
        },
      ],
      "_type": "google_storage_bucket",
      "access": "Not public",
      "classification": null,
      "createdOn": 1631573762534,
      "displayName": "j1-gc-integration-dev-v3-super-secret-stuff",
      "encrypted": true,
      "encryptionKeyRef": undefined,
      "etag": "CAw=",
      "id": "j1-gc-integration-dev-v3-super-secret-stuff",
      "kmsKeyName": undefined,
      "location": "US",
      "name": "j1-gc-integration-dev-v3-super-secret-stuff",
      "public": false,
      "retentionDate": undefined,
      "retentionPeriod": undefined,
      "retentionPolicyEnabled": undefined,
      "storageClass": "STANDARD",
      "uniformBucketLevelAccess": false,
      "updatedOn": 1635359392571,
      "versioningEnabled": false,
      "webLink": "https://console.cloud.google.com/storage/browser/j1-gc-integration-dev-v3-super-secret-stuff;tab=objects?forceOnBucketsSortingFiltering=false&project=j1-gc-integration-dev-v3",
    },
    {
      "_class": [
        "DataStore",
      ],
      "_key": "bucket:j1-gc-integration-dev-v3-test-tf-bucket",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "etag": "CAI=",
            "iamConfiguration": {
              "bucketPolicyOnly": {
                "enabled": false,
              },
              "publicAccessPrevention": "enforced",
              "uniformBucketLevelAccess": {
                "enabled": false,
              },
            },
            "id": "j1-gc-integration-dev-v3-test-tf-bucket",
            "kind": "storage#bucket",
            "location": "US",
            "locationType": "multi-region",
            "metageneration": "2",
            "name": "j1-gc-integration-dev-v3-test-tf-bucket",
            "projectNumber": "167984947943",
            "rpo": "DEFAULT",
            "selfLink": "https://www.googleapis.com/storage/v1/b/j1-gc-integration-dev-v3-test-tf-bucket",
            "storageClass": "STANDARD",
            "timeCreated": "2021-07-22T13:15:31.543Z",
            "updated": "2022-02-07T12:41:33.448Z",
          },
        },
      ],
      "_type": "google_storage_bucket",
      "access": "Not public",
      "classification": null,
      "createdOn": 1626959731543,
      "displayName": "j1-gc-integration-dev-v3-test-tf-bucket",
      "encrypted": true,
      "encryptionKeyRef": undefined,
      "etag": "CAI=",
      "id": "j1-gc-integration-dev-v3-test-tf-bucket",
      "kmsKeyName": undefined,
      "location": "US",
      "name": "j1-gc-integration-dev-v3-test-tf-bucket",
      "public": false,
      "retentionDate": undefined,
      "retentionPeriod": undefined,
      "retentionPolicyEnabled": undefined,
      "storageClass": "STANDARD",
      "uniformBucketLevelAccess": false,
      "updatedOn": 1644237693448,
      "versioningEnabled": false,
      "webLink": "https://console.cloud.google.com/storage/browser/j1-gc-integration-dev-v3-test-tf-bucket;tab=objects?forceOnBucketsSortingFiltering=false&project=j1-gc-integration-dev-v3",
    },
    {
      "_class": [
        "DataStore",
      ],
      "_key": "bucket:j1-gc-integration-dev-v3.appspot.com",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "etag": "CAE=",
            "iamConfiguration": {
              "bucketPolicyOnly": {
                "enabled": false,
              },
              "publicAccessPrevention": "inherited",
              "uniformBucketLevelAccess": {
                "enabled": false,
              },
            },
            "id": "j1-gc-integration-dev-v3.appspot.com",
            "kind": "storage#bucket",
            "location": "US",
            "locationType": "multi-region",
            "metageneration": "1",
            "name": "j1-gc-integration-dev-v3.appspot.com",
            "projectNumber": "167984947943",
            "rpo": "DEFAULT",
            "selfLink": "https://www.googleapis.com/storage/v1/b/j1-gc-integration-dev-v3.appspot.com",
            "storageClass": "STANDARD",
            "timeCreated": "2022-03-16T10:53:36.805Z",
            "updated": "2022-03-16T10:53:36.805Z",
          },
        },
      ],
      "_type": "google_storage_bucket",
      "access": "Not public",
      "classification": null,
      "createdOn": 1647428016805,
      "displayName": "j1-gc-integration-dev-v3.appspot.com",
      "encrypted": true,
      "encryptionKeyRef": undefined,
      "etag": "CAE=",
      "id": "j1-gc-integration-dev-v3.appspot.com",
      "kmsKeyName": undefined,
      "location": "US",
      "name": "j1-gc-integration-dev-v3.appspot.com",
      "public": false,
      "retentionDate": undefined,
      "retentionPeriod": undefined,
      "retentionPolicyEnabled": undefined,
      "storageClass": "STANDARD",
      "uniformBucketLevelAccess": false,
      "updatedOn": 1647428016805,
      "versioningEnabled": false,
      "webLink": "https://console.cloud.google.com/storage/browser/j1-gc-integration-dev-v3.appspot.com;tab=objects?forceOnBucketsSortingFiltering=false&project=j1-gc-integration-dev-v3",
    },
    {
      "_class": [
        "DataStore",
      ],
      "_key": "bucket:j1-gc-integration-dev-v3cloudfunctions",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "etag": "CAU=",
            "iamConfiguration": {
              "bucketPolicyOnly": {
                "enabled": false,
              },
              "publicAccessPrevention": "inherited",
              "uniformBucketLevelAccess": {
                "enabled": false,
              },
            },
            "id": "j1-gc-integration-dev-v3cloudfunctions",
            "kind": "storage#bucket",
            "location": "US",
            "locationType": "multi-region",
            "metageneration": "5",
            "name": "j1-gc-integration-dev-v3cloudfunctions",
            "projectNumber": "167984947943",
            "rpo": "DEFAULT",
            "selfLink": "https://www.googleapis.com/storage/v1/b/j1-gc-integration-dev-v3cloudfunctions",
            "storageClass": "STANDARD",
            "timeCreated": "2021-05-31T16:25:44.251Z",
            "updated": "2021-09-13T17:25:24.390Z",
          },
        },
      ],
      "_type": "google_storage_bucket",
      "access": "Not public",
      "classification": null,
      "createdOn": 1622478344251,
      "displayName": "j1-gc-integration-dev-v3cloudfunctions",
      "encrypted": true,
      "encryptionKeyRef": undefined,
      "etag": "CAU=",
      "id": "j1-gc-integration-dev-v3cloudfunctions",
      "kmsKeyName": undefined,
      "location": "US",
      "name": "j1-gc-integration-dev-v3cloudfunctions",
      "public": false,
      "retentionDate": undefined,
      "retentionPeriod": undefined,
      "retentionPolicyEnabled": undefined,
      "storageClass": "STANDARD",
      "uniformBucketLevelAccess": false,
      "updatedOn": 1631553924390,
      "versioningEnabled": false,
      "webLink": "https://console.cloud.google.com/storage/browser/j1-gc-integration-dev-v3cloudfunctions;tab=objects?forceOnBucketsSortingFiltering=false&project=j1-gc-integration-dev-v3",
    },
    {
      "_class": [
        "DataStore",
      ],
      "_key": "bucket:staging.j1-gc-integration-dev-v3.appspot.com",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "etag": "CAE=",
            "iamConfiguration": {
              "bucketPolicyOnly": {
                "enabled": false,
              },
              "publicAccessPrevention": "inherited",
              "uniformBucketLevelAccess": {
                "enabled": false,
              },
            },
            "id": "staging.j1-gc-integration-dev-v3.appspot.com",
            "kind": "storage#bucket",
            "lifecycle": {
              "rule": [
                {
                  "action": {
                    "type": "Delete",
                  },
                  "condition": {
                    "age": 15,
                  },
                },
              ],
            },
            "location": "US",
            "locationType": "multi-region",
            "metageneration": "1",
            "name": "staging.j1-gc-integration-dev-v3.appspot.com",
            "projectNumber": "167984947943",
            "rpo": "DEFAULT",
            "selfLink": "https://www.googleapis.com/storage/v1/b/staging.j1-gc-integration-dev-v3.appspot.com",
            "storageClass": "STANDARD",
            "timeCreated": "2022-03-16T10:53:36.905Z",
            "updated": "2022-03-16T10:53:36.905Z",
          },
        },
      ],
      "_type": "google_storage_bucket",
      "access": "Not public",
      "classification": null,
      "createdOn": 1647428016905,
      "displayName": "staging.j1-gc-integration-dev-v3.appspot.com",
      "encrypted": true,
      "encryptionKeyRef": undefined,
      "etag": "CAE=",
      "id": "staging.j1-gc-integration-dev-v3.appspot.com",
      "kmsKeyName": undefined,
      "location": "US",
      "name": "staging.j1-gc-integration-dev-v3.appspot.com",
      "public": false,
      "retentionDate": undefined,
      "retentionPeriod": undefined,
      "retentionPolicyEnabled": undefined,
      "storageClass": "STANDARD",
      "uniformBucketLevelAccess": false,
      "updatedOn": 1647428016905,
      "versioningEnabled": false,
      "webLink": "https://console.cloud.google.com/storage/browser/staging.j1-gc-integration-dev-v3.appspot.com;tab=objects?forceOnBucketsSortingFiltering=false&project=j1-gc-integration-dev-v3",
    },
    {
      "_class": [
        "DataStore",
      ],
      "_key": "bucket:us.artifacts.j1-gc-integration-dev-v3.appspot.com",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "etag": "CAE=",
            "iamConfiguration": {
              "bucketPolicyOnly": {
                "enabled": false,
              },
              "publicAccessPrevention": "inherited",
              "uniformBucketLevelAccess": {
                "enabled": false,
              },
            },
            "id": "us.artifacts.j1-gc-integration-dev-v3.appspot.com",
            "kind": "storage#bucket",
            "location": "US",
            "locationType": "multi-region",
            "metageneration": "1",
            "name": "us.artifacts.j1-gc-integration-dev-v3.appspot.com",
            "projectNumber": "167984947943",
            "rpo": "DEFAULT",
            "selfLink": "https://www.googleapis.com/storage/v1/b/us.artifacts.j1-gc-integration-dev-v3.appspot.com",
            "storageClass": "STANDARD",
            "timeCreated": "2021-05-31T16:35:42.461Z",
            "updated": "2021-05-31T16:35:42.461Z",
          },
        },
      ],
      "_type": "google_storage_bucket",
      "access": "Not public",
      "classification": null,
      "createdOn": 1622478942461,
      "displayName": "us.artifacts.j1-gc-integration-dev-v3.appspot.com",
      "encrypted": true,
      "encryptionKeyRef": undefined,
      "etag": "CAE=",
      "id": "us.artifacts.j1-gc-integration-dev-v3.appspot.com",
      "kmsKeyName": undefined,
      "location": "US",
      "name": "us.artifacts.j1-gc-integration-dev-v3.appspot.com",
      "public": false,
      "retentionDate": undefined,
      "retentionPeriod": undefined,
      "retentionPolicyEnabled": undefined,
      "storageClass": "STANDARD",
      "uniformBucketLevelAccess": false,
      "updatedOn": 1622478942461,
      "versioningEnabled": false,
      "webLink": "https://console.cloud.google.com/storage/browser/us.artifacts.j1-gc-integration-dev-v3.appspot.com;tab=objects?forceOnBucketsSortingFiltering=false&project=j1-gc-integration-dev-v3",
    },
    {
      "_class": [
        "Logs",
      ],
      "_key": "google_logging_log_sink:my-instance-sink",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "createTime": "2021-05-31T16:25:55.464642273Z",
            "description": "an example sink",
            "destination": "storage.googleapis.com/j1-gc-integration-dev-v3-sink-logging-bucket",
            "name": "my-instance-sink",
            "updateTime": "2021-05-31T16:25:55.464642273Z",
            "writerIdentity": "serviceAccount:cloud-logs@system.gserviceaccount.com",
          },
        },
      ],
      "_type": "google_logging_project_sink",
      "createdOn": 1622478355464,
      "description": "an example sink",
      "destination": "storage.googleapis.com/j1-gc-integration-dev-v3-sink-logging-bucket",
      "displayName": "my-instance-sink",
      "filter": undefined,
      "name": "my-instance-sink",
      "updatedOn": 1622478355464,
      "webLink": "https://console.cloud.google.com/logs/router?project=j1-gc-integration-dev-v3",
    },
    {
      "_class": [
        "Logs",
      ],
      "_key": "google_logging_log_sink:_Required",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "destination": "logging.googleapis.com/projects/j1-gc-integration-dev-v3/locations/global/buckets/_Required",
            "filter": "LOG_ID("cloudaudit.googleapis.com/activity") OR LOG_ID("externalaudit.googleapis.com/activity") OR LOG_ID("cloudaudit.googleapis.com/system_event") OR LOG_ID("externalaudit.googleapis.com/system_event") OR LOG_ID("cloudaudit.googleapis.com/access_transparency") OR LOG_ID("externalaudit.googleapis.com/access_transparency")",
            "name": "_Required",
          },
        },
      ],
      "_type": "google_logging_project_sink",
      "createdOn": undefined,
      "destination": "logging.googleapis.com/projects/j1-gc-integration-dev-v3/locations/global/buckets/_Required",
      "displayName": "_Required",
      "filter": "LOG_ID("cloudaudit.googleapis.com/activity") OR LOG_ID("externalaudit.googleapis.com/activity") OR LOG_ID("cloudaudit.googleapis.com/system_event") OR LOG_ID("externalaudit.googleapis.com/system_event") OR LOG_ID("cloudaudit.googleapis.com/access_transparency") OR LOG_ID("externalaudit.googleapis.com/access_transparency")",
      "name": "_Required",
      "updatedOn": undefined,
      "webLink": "https://console.cloud.google.com/logs/router?project=j1-gc-integration-dev-v3",
    },
    {
      "_class": [
        "Logs",
      ],
      "_key": "google_logging_log_sink:_Default",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "destination": "logging.googleapis.com/projects/j1-gc-integration-dev-v3/locations/global/buckets/_Default",
            "filter": "NOT LOG_ID("cloudaudit.googleapis.com/activity") AND NOT LOG_ID("externalaudit.googleapis.com/activity") AND NOT LOG_ID("cloudaudit.googleapis.com/system_event") AND NOT LOG_ID("externalaudit.googleapis.com/system_event") AND NOT LOG_ID("cloudaudit.googleapis.com/access_transparency") AND NOT LOG_ID("externalaudit.googleapis.com/access_transparency")",
            "name": "_Default",
          },
        },
      ],
      "_type": "google_logging_project_sink",
      "createdOn": undefined,
      "destination": "logging.googleapis.com/projects/j1-gc-integration-dev-v3/locations/global/buckets/_Default",
      "displayName": "_Default",
      "filter": "NOT LOG_ID("cloudaudit.googleapis.com/activity") AND NOT LOG_ID("externalaudit.googleapis.com/activity") AND NOT LOG_ID("cloudaudit.googleapis.com/system_event") AND NOT LOG_ID("externalaudit.googleapis.com/system_event") AND NOT LOG_ID("cloudaudit.googleapis.com/access_transparency") AND NOT LOG_ID("externalaudit.googleapis.com/access_transparency")",
      "name": "_Default",
      "updatedOn": undefined,
      "webLink": "https://console.cloud.google.com/logs/router?project=j1-gc-integration-dev-v3",
    },
  ],
  "collectedRelationships": [
    {
      "_class": "USES",
      "_fromEntityKey": "google_logging_log_sink:my-instance-sink",
      "_key": "google_logging_log_sink:my-instance-sink|uses|bucket:j1-gc-integration-dev-v3-sink-logging-bucket",
      "_toEntityKey": "bucket:j1-gc-integration-dev-v3-sink-logging-bucket",
      "_type": "google_logging_project_sink_uses_storage_bucket",
      "displayName": "USES",
    },
  ],
  "encounteredTypes": [
    "google_storage_bucket",
    "google_logging_project_sink",
    "google_logging_project_sink_uses_storage_bucket",
  ],
  "numCollectedEntities": 16,
  "numCollectedRelationships": 1,
}
`;

exports[`#fetchMetrics should collect data 1`] = `
{
  "collectedEntities": [
    {
      "_class": [
        "Policy",
      ],
      "_key": "projects/j1-gc-integration-dev-v2/alertPolicies/8900061597970753716",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "combiner": "OR",
            "conditions": [
              {
                "conditionThreshold": {
                  "aggregations": [
                    {
                      "alignmentPeriod": "300s",
                      "perSeriesAligner": "ALIGN_RATE",
                    },
                  ],
                  "comparison": "COMPARISON_GT",
                  "duration": "0s",
                  "filter": "metric.type="logging.googleapis.com/user/my-example-metric" AND resource.type="metric"",
                  "trigger": {
                    "count": 1,
                  },
                },
                "displayName": "test condition",
                "name": "projects/j1-gc-integration-dev-v2/alertPolicies/8900061597970753716/conditions/8900061597970755317",
              },
            ],
            "creationRecord": {
              "mutateTime": "2021-02-19T13:41:42.161511391Z",
              "mutatedBy": "j1-gc-integration-dev-v2-tf@j1-gc-integration-dev-v2.iam.gserviceaccount.com",
            },
            "displayName": "Example Alert Policy",
            "enabled": true,
            "mutationRecord": {
              "mutateTime": "2021-02-19T13:41:42.161511391Z",
              "mutatedBy": "j1-gc-integration-dev-v2-tf@j1-gc-integration-dev-v2.iam.gserviceaccount.com",
            },
            "name": "projects/j1-gc-integration-dev-v2/alertPolicies/8900061597970753716",
          },
        },
      ],
      "_type": "google_monitoring_alert_policy",
      "conditionFilters": [
        "metric.type="logging.googleapis.com/user/my-example-metric" AND resource.type="metric"",
      ],
      "content": "",
      "createdOn": 1613742102161,
      "displayName": "Example Alert Policy",
      "enabled": true,
      "name": "Example Alert Policy",
      "summary": "Alert policy that is triggered based on some metric",
      "title": "Alert policy",
      "updatedOn": 1613742102161,
      "webLink": "https://console.cloud.google.com/monitoring/alerting/policies/8900061597970753716?project=j1-gc-integration-dev-v2",
    },
    {
      "_class": [
        "Configuration",
      ],
      "_key": "my-example-metric",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "createTime": "2021-02-17T23:05:06.358873155Z",
            "filter": "protoPayload.methodName="SetIamPolicy" AND protoPayload.serviceData.policyDelta.auditConfigDeltas:*",
            "labelExtractors": {
              "occurences": "EXTRACT(textPayload)",
            },
            "metricDescriptor": {
              "displayName": "My metric",
              "labels": [
                {
                  "key": "occurences",
                  "valueType": "INT64",
                },
              ],
              "metricKind": "DELTA",
              "name": "projects/j1-gc-integration-dev-v2/metricDescriptors/logging.googleapis.com/user/my-example-metric",
              "type": "logging.googleapis.com/user/my-example-metric",
              "unit": "1",
              "valueType": "INT64",
            },
            "name": "my-example-metric",
            "updateTime": "2021-02-17T23:05:06.358873155Z",
          },
        },
      ],
      "_type": "google_logging_metric",
      "createdOn": 1613603106358,
      "displayName": "my-example-metric",
      "filter": "protoPayload.methodName="SetIamPolicy" AND protoPayload.serviceData.policyDelta.auditConfigDeltas:*",
      "name": "my-example-metric",
      "updatedOn": 1613603106358,
      "webLink": "https://console.cloud.google.com/logs/metrics?project=j1-gc-integration-dev-v2",
    },
  ],
  "collectedRelationships": [
    {
      "_class": "HAS",
      "_fromEntityKey": "my-example-metric",
      "_key": "my-example-metric|has|projects/j1-gc-integration-dev-v2/alertPolicies/8900061597970753716",
      "_toEntityKey": "projects/j1-gc-integration-dev-v2/alertPolicies/8900061597970753716",
      "_type": "google_logging_metric_has_monitoring_alert_policy",
      "displayName": "HAS",
    },
  ],
  "encounteredTypes": [
    "google_monitoring_alert_policy",
    "google_logging_metric",
    "google_logging_metric_has_monitoring_alert_policy",
  ],
  "numCollectedEntities": 2,
  "numCollectedRelationships": 1,
}
`;

exports[`#fetchProjectSinks should collect data 1`] = `
{
  "collectedEntities": [
    {
      "_class": [
        "DataStore",
      ],
      "_key": "bucket:dataproc-staging-europe-north1-167984947943-oqqo30p7",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "etag": "CAE=",
            "iamConfiguration": {
              "bucketPolicyOnly": {
                "enabled": false,
              },
              "publicAccessPrevention": "inherited",
              "uniformBucketLevelAccess": {
                "enabled": false,
              },
            },
            "id": "dataproc-staging-europe-north1-167984947943-oqqo30p7",
            "kind": "storage#bucket",
            "location": "EUROPE-NORTH1",
            "locationType": "region",
            "metageneration": "1",
            "name": "dataproc-staging-europe-north1-167984947943-oqqo30p7",
            "projectNumber": "167984947943",
            "selfLink": "https://www.googleapis.com/storage/v1/b/dataproc-staging-europe-north1-167984947943-oqqo30p7",
            "storageClass": "STANDARD",
            "timeCreated": "2021-07-20T12:47:31.280Z",
            "updated": "2021-07-20T12:47:31.280Z",
          },
        },
      ],
      "_type": "google_storage_bucket",
      "access": "Subject to object ACLs",
      "classification": null,
      "createdOn": 1626785251280,
      "displayName": "dataproc-staging-europe-north1-167984947943-oqqo30p7",
      "encrypted": true,
      "encryptionKeyRef": undefined,
      "etag": "CAE=",
      "id": "dataproc-staging-europe-north1-167984947943-oqqo30p7",
      "kmsKeyName": undefined,
      "location": "EUROPE-NORTH1",
      "name": "dataproc-staging-europe-north1-167984947943-oqqo30p7",
      "public": true,
      "retentionDate": undefined,
      "retentionPeriod": undefined,
      "retentionPolicyEnabled": undefined,
      "storageClass": "STANDARD",
      "uniformBucketLevelAccess": false,
      "updatedOn": 1626785251280,
      "versioningEnabled": false,
      "webLink": "https://console.cloud.google.com/storage/browser/dataproc-staging-europe-north1-167984947943-oqqo30p7;tab=objects?forceOnBucketsSortingFiltering=false&project=j1-gc-integration-dev-v3",
    },
    {
      "_class": [
        "DataStore",
      ],
      "_key": "bucket:dataproc-staging-us-central1-167984947943-okmnuod7",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "etag": "CAc=",
            "iamConfiguration": {
              "bucketPolicyOnly": {
                "enabled": false,
              },
              "publicAccessPrevention": "inherited",
              "uniformBucketLevelAccess": {
                "enabled": false,
              },
            },
            "id": "dataproc-staging-us-central1-167984947943-okmnuod7",
            "kind": "storage#bucket",
            "location": "US-CENTRAL1",
            "locationType": "region",
            "metageneration": "7",
            "name": "dataproc-staging-us-central1-167984947943-okmnuod7",
            "projectNumber": "167984947943",
            "selfLink": "https://www.googleapis.com/storage/v1/b/dataproc-staging-us-central1-167984947943-okmnuod7",
            "storageClass": "STANDARD",
            "timeCreated": "2021-07-20T12:47:10.911Z",
            "updated": "2021-09-08T17:19:48.039Z",
          },
        },
      ],
      "_type": "google_storage_bucket",
      "access": "Public to internet",
      "classification": null,
      "createdOn": 1626785230911,
      "displayName": "dataproc-staging-us-central1-167984947943-okmnuod7",
      "encrypted": true,
      "encryptionKeyRef": undefined,
      "etag": "CAc=",
      "id": "dataproc-staging-us-central1-167984947943-okmnuod7",
      "kmsKeyName": undefined,
      "location": "US-CENTRAL1",
      "name": "dataproc-staging-us-central1-167984947943-okmnuod7",
      "public": true,
      "retentionDate": undefined,
      "retentionPeriod": undefined,
      "retentionPolicyEnabled": undefined,
      "storageClass": "STANDARD",
      "uniformBucketLevelAccess": false,
      "updatedOn": 1631121588039,
      "versioningEnabled": false,
      "webLink": "https://console.cloud.google.com/storage/browser/dataproc-staging-us-central1-167984947943-okmnuod7;tab=objects?forceOnBucketsSortingFiltering=false&project=j1-gc-integration-dev-v3",
    },
    {
      "_class": [
        "DataStore",
      ],
      "_key": "bucket:dataproc-temp-europe-north1-167984947943-0quq0oz0",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "etag": "CAE=",
            "iamConfiguration": {
              "bucketPolicyOnly": {
                "enabled": false,
              },
              "publicAccessPrevention": "inherited",
              "uniformBucketLevelAccess": {
                "enabled": false,
              },
            },
            "id": "dataproc-temp-europe-north1-167984947943-0quq0oz0",
            "kind": "storage#bucket",
            "lifecycle": {
              "rule": [
                {
                  "action": {
                    "type": "Delete",
                  },
                  "condition": {
                    "age": 90,
                  },
                },
              ],
            },
            "location": "EUROPE-NORTH1",
            "locationType": "region",
            "metageneration": "1",
            "name": "dataproc-temp-europe-north1-167984947943-0quq0oz0",
            "projectNumber": "167984947943",
            "selfLink": "https://www.googleapis.com/storage/v1/b/dataproc-temp-europe-north1-167984947943-0quq0oz0",
            "storageClass": "STANDARD",
            "timeCreated": "2021-07-20T12:47:31.407Z",
            "updated": "2021-07-20T12:47:31.407Z",
          },
        },
      ],
      "_type": "google_storage_bucket",
      "access": "Subject to object ACLs",
      "classification": null,
      "createdOn": 1626785251407,
      "displayName": "dataproc-temp-europe-north1-167984947943-0quq0oz0",
      "encrypted": true,
      "encryptionKeyRef": undefined,
      "etag": "CAE=",
      "id": "dataproc-temp-europe-north1-167984947943-0quq0oz0",
      "kmsKeyName": undefined,
      "location": "EUROPE-NORTH1",
      "name": "dataproc-temp-europe-north1-167984947943-0quq0oz0",
      "public": true,
      "retentionDate": undefined,
      "retentionPeriod": undefined,
      "retentionPolicyEnabled": undefined,
      "storageClass": "STANDARD",
      "uniformBucketLevelAccess": false,
      "updatedOn": 1626785251407,
      "versioningEnabled": false,
      "webLink": "https://console.cloud.google.com/storage/browser/dataproc-temp-europe-north1-167984947943-0quq0oz0;tab=objects?forceOnBucketsSortingFiltering=false&project=j1-gc-integration-dev-v3",
    },
    {
      "_class": [
        "DataStore",
      ],
      "_key": "bucket:dataproc-temp-us-central1-167984947943-c8nlqeyo",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "etag": "CAE=",
            "iamConfiguration": {
              "bucketPolicyOnly": {
                "enabled": false,
              },
              "publicAccessPrevention": "inherited",
              "uniformBucketLevelAccess": {
                "enabled": false,
              },
            },
            "id": "dataproc-temp-us-central1-167984947943-c8nlqeyo",
            "kind": "storage#bucket",
            "lifecycle": {
              "rule": [
                {
                  "action": {
                    "type": "Delete",
                  },
                  "condition": {
                    "age": 90,
                  },
                },
              ],
            },
            "location": "US-CENTRAL1",
            "locationType": "region",
            "metageneration": "1",
            "name": "dataproc-temp-us-central1-167984947943-c8nlqeyo",
            "projectNumber": "167984947943",
            "selfLink": "https://www.googleapis.com/storage/v1/b/dataproc-temp-us-central1-167984947943-c8nlqeyo",
            "storageClass": "STANDARD",
            "timeCreated": "2021-07-20T12:47:10.793Z",
            "updated": "2021-07-20T12:47:10.793Z",
          },
        },
      ],
      "_type": "google_storage_bucket",
      "access": "Subject to object ACLs",
      "classification": null,
      "createdOn": 1626785230793,
      "displayName": "dataproc-temp-us-central1-167984947943-c8nlqeyo",
      "encrypted": true,
      "encryptionKeyRef": undefined,
      "etag": "CAE=",
      "id": "dataproc-temp-us-central1-167984947943-c8nlqeyo",
      "kmsKeyName": undefined,
      "location": "US-CENTRAL1",
      "name": "dataproc-temp-us-central1-167984947943-c8nlqeyo",
      "public": true,
      "retentionDate": undefined,
      "retentionPeriod": undefined,
      "retentionPolicyEnabled": undefined,
      "storageClass": "STANDARD",
      "uniformBucketLevelAccess": false,
      "updatedOn": 1626785230793,
      "versioningEnabled": false,
      "webLink": "https://console.cloud.google.com/storage/browser/dataproc-temp-us-central1-167984947943-c8nlqeyo;tab=objects?forceOnBucketsSortingFiltering=false&project=j1-gc-integration-dev-v3",
    },
    {
      "_class": [
        "DataStore",
      ],
      "_key": "bucket:gcf-sources-167984947943-us-central1",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "cors": [
              {
                "method": [
                  "GET",
                ],
                "origin": [
                  "https://*.cloud.google.com",
                  "https://*.corp.google.com",
                  "https://*.corp.google.com:*",
                ],
              },
            ],
            "etag": "CAE=",
            "iamConfiguration": {
              "bucketPolicyOnly": {
                "enabled": true,
                "lockedTime": "2021-08-29T16:26:23.272Z",
              },
              "publicAccessPrevention": "inherited",
              "uniformBucketLevelAccess": {
                "enabled": true,
                "lockedTime": "2021-08-29T16:26:23.272Z",
              },
            },
            "id": "gcf-sources-167984947943-us-central1",
            "kind": "storage#bucket",
            "location": "US-CENTRAL1",
            "locationType": "region",
            "metageneration": "1",
            "name": "gcf-sources-167984947943-us-central1",
            "projectNumber": "167984947943",
            "selfLink": "https://www.googleapis.com/storage/v1/b/gcf-sources-167984947943-us-central1",
            "storageClass": "STANDARD",
            "timeCreated": "2021-05-31T16:26:23.272Z",
            "updated": "2021-05-31T16:26:23.272Z",
          },
        },
      ],
      "_type": "google_storage_bucket",
      "access": "Not public",
      "classification": null,
      "createdOn": 1622478383272,
      "displayName": "gcf-sources-167984947943-us-central1",
      "encrypted": true,
      "encryptionKeyRef": undefined,
      "etag": "CAE=",
      "id": "gcf-sources-167984947943-us-central1",
      "kmsKeyName": undefined,
      "location": "US-CENTRAL1",
      "name": "gcf-sources-167984947943-us-central1",
      "public": false,
      "retentionDate": undefined,
      "retentionPeriod": undefined,
      "retentionPolicyEnabled": undefined,
      "storageClass": "STANDARD",
      "uniformBucketLevelAccess": true,
      "updatedOn": 1622478383272,
      "versioningEnabled": false,
      "webLink": "https://console.cloud.google.com/storage/browser/gcf-sources-167984947943-us-central1;tab=objects?forceOnBucketsSortingFiltering=false&project=j1-gc-integration-dev-v3",
    },
    {
      "_class": [
        "DataStore",
      ],
      "_key": "bucket:j1-gc-integration-dev-v3-sink-logging-bucket",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "etag": "CAE=",
            "iamConfiguration": {
              "bucketPolicyOnly": {
                "enabled": false,
              },
              "publicAccessPrevention": "inherited",
              "uniformBucketLevelAccess": {
                "enabled": false,
              },
            },
            "id": "j1-gc-integration-dev-v3-sink-logging-bucket",
            "kind": "storage#bucket",
            "location": "US",
            "locationType": "multi-region",
            "metageneration": "1",
            "name": "j1-gc-integration-dev-v3-sink-logging-bucket",
            "projectNumber": "167984947943",
            "rpo": "DEFAULT",
            "selfLink": "https://www.googleapis.com/storage/v1/b/j1-gc-integration-dev-v3-sink-logging-bucket",
            "storageClass": "STANDARD",
            "timeCreated": "2021-05-31T16:25:51.614Z",
            "updated": "2021-05-31T16:25:51.614Z",
          },
        },
      ],
      "_type": "google_storage_bucket",
      "access": "Subject to object ACLs",
      "classification": null,
      "createdOn": 1622478351614,
      "displayName": "j1-gc-integration-dev-v3-sink-logging-bucket",
      "encrypted": true,
      "encryptionKeyRef": undefined,
      "etag": "CAE=",
      "id": "j1-gc-integration-dev-v3-sink-logging-bucket",
      "kmsKeyName": undefined,
      "location": "US",
      "name": "j1-gc-integration-dev-v3-sink-logging-bucket",
      "public": true,
      "retentionDate": undefined,
      "retentionPeriod": undefined,
      "retentionPolicyEnabled": undefined,
      "storageClass": "STANDARD",
      "uniformBucketLevelAccess": false,
      "updatedOn": 1622478351614,
      "versioningEnabled": false,
      "webLink": "https://console.cloud.google.com/storage/browser/j1-gc-integration-dev-v3-sink-logging-bucket;tab=objects?forceOnBucketsSortingFiltering=false&project=j1-gc-integration-dev-v3",
    },
    {
      "_class": [
        "DataStore",
      ],
      "_key": "bucket:j1-gc-integration-dev-v3-super-secret-stuff",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "defaultEventBasedHold": false,
            "etag": "CAw=",
            "iamConfiguration": {
              "bucketPolicyOnly": {
                "enabled": false,
              },
              "publicAccessPrevention": "inherited",
              "uniformBucketLevelAccess": {
                "enabled": false,
              },
            },
            "id": "j1-gc-integration-dev-v3-super-secret-stuff",
            "kind": "storage#bucket",
            "location": "US",
            "locationType": "multi-region",
            "metageneration": "12",
            "name": "j1-gc-integration-dev-v3-super-secret-stuff",
            "projectNumber": "167984947943",
            "rpo": "DEFAULT",
            "satisfiesPZS": false,
            "selfLink": "https://www.googleapis.com/storage/v1/b/j1-gc-integration-dev-v3-super-secret-stuff",
            "storageClass": "STANDARD",
            "timeCreated": "2021-09-13T22:56:02.534Z",
            "updated": "2021-10-27T18:29:52.571Z",
          },
        },
      ],
      "_type": "google_storage_bucket",
      "access": "Public to internet",
      "classification": null,
      "createdOn": 1631573762534,
      "displayName": "j1-gc-integration-dev-v3-super-secret-stuff",
      "encrypted": true,
      "encryptionKeyRef": undefined,
      "etag": "CAw=",
      "id": "j1-gc-integration-dev-v3-super-secret-stuff",
      "kmsKeyName": undefined,
      "location": "US",
      "name": "j1-gc-integration-dev-v3-super-secret-stuff",
      "public": true,
      "retentionDate": undefined,
      "retentionPeriod": undefined,
      "retentionPolicyEnabled": undefined,
      "storageClass": "STANDARD",
      "uniformBucketLevelAccess": false,
      "updatedOn": 1635359392571,
      "versioningEnabled": false,
      "webLink": "https://console.cloud.google.com/storage/browser/j1-gc-integration-dev-v3-super-secret-stuff;tab=objects?forceOnBucketsSortingFiltering=false&project=j1-gc-integration-dev-v3",
    },
    {
      "_class": [
        "DataStore",
      ],
      "_key": "bucket:j1-gc-integration-dev-v3-test-tf-bucket",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "etag": "CAI=",
            "iamConfiguration": {
              "bucketPolicyOnly": {
                "enabled": false,
              },
              "publicAccessPrevention": "enforced",
              "uniformBucketLevelAccess": {
                "enabled": false,
              },
            },
            "id": "j1-gc-integration-dev-v3-test-tf-bucket",
            "kind": "storage#bucket",
            "location": "US",
            "locationType": "multi-region",
            "metageneration": "2",
            "name": "j1-gc-integration-dev-v3-test-tf-bucket",
            "projectNumber": "167984947943",
            "rpo": "DEFAULT",
            "selfLink": "https://www.googleapis.com/storage/v1/b/j1-gc-integration-dev-v3-test-tf-bucket",
            "storageClass": "STANDARD",
            "timeCreated": "2021-07-22T13:15:31.543Z",
            "updated": "2022-02-07T12:41:33.448Z",
          },
        },
      ],
      "_type": "google_storage_bucket",
      "access": "Not public",
      "classification": null,
      "createdOn": 1626959731543,
      "displayName": "j1-gc-integration-dev-v3-test-tf-bucket",
      "encrypted": true,
      "encryptionKeyRef": undefined,
      "etag": "CAI=",
      "id": "j1-gc-integration-dev-v3-test-tf-bucket",
      "kmsKeyName": undefined,
      "location": "US",
      "name": "j1-gc-integration-dev-v3-test-tf-bucket",
      "public": false,
      "retentionDate": undefined,
      "retentionPeriod": undefined,
      "retentionPolicyEnabled": undefined,
      "storageClass": "STANDARD",
      "uniformBucketLevelAccess": false,
      "updatedOn": 1644237693448,
      "versioningEnabled": false,
      "webLink": "https://console.cloud.google.com/storage/browser/j1-gc-integration-dev-v3-test-tf-bucket;tab=objects?forceOnBucketsSortingFiltering=false&project=j1-gc-integration-dev-v3",
    },
    {
      "_class": [
        "DataStore",
      ],
      "_key": "bucket:j1-gc-integration-dev-v3cloudfunctions",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "etag": "CAU=",
            "iamConfiguration": {
              "bucketPolicyOnly": {
                "enabled": false,
              },
              "publicAccessPrevention": "inherited",
              "uniformBucketLevelAccess": {
                "enabled": false,
              },
            },
            "id": "j1-gc-integration-dev-v3cloudfunctions",
            "kind": "storage#bucket",
            "location": "US",
            "locationType": "multi-region",
            "metageneration": "5",
            "name": "j1-gc-integration-dev-v3cloudfunctions",
            "projectNumber": "167984947943",
            "rpo": "DEFAULT",
            "selfLink": "https://www.googleapis.com/storage/v1/b/j1-gc-integration-dev-v3cloudfunctions",
            "storageClass": "STANDARD",
            "timeCreated": "2021-05-31T16:25:44.251Z",
            "updated": "2021-09-13T17:25:24.390Z",
          },
        },
      ],
      "_type": "google_storage_bucket",
      "access": "Subject to object ACLs",
      "classification": null,
      "createdOn": 1622478344251,
      "displayName": "j1-gc-integration-dev-v3cloudfunctions",
      "encrypted": true,
      "encryptionKeyRef": undefined,
      "etag": "CAU=",
      "id": "j1-gc-integration-dev-v3cloudfunctions",
      "kmsKeyName": undefined,
      "location": "US",
      "name": "j1-gc-integration-dev-v3cloudfunctions",
      "public": true,
      "retentionDate": undefined,
      "retentionPeriod": undefined,
      "retentionPolicyEnabled": undefined,
      "storageClass": "STANDARD",
      "uniformBucketLevelAccess": false,
      "updatedOn": 1631553924390,
      "versioningEnabled": false,
      "webLink": "https://console.cloud.google.com/storage/browser/j1-gc-integration-dev-v3cloudfunctions;tab=objects?forceOnBucketsSortingFiltering=false&project=j1-gc-integration-dev-v3",
    },
    {
      "_class": [
        "DataStore",
      ],
      "_key": "bucket:us.artifacts.j1-gc-integration-dev-v3.appspot.com",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "etag": "CAE=",
            "iamConfiguration": {
              "bucketPolicyOnly": {
                "enabled": false,
              },
              "publicAccessPrevention": "inherited",
              "uniformBucketLevelAccess": {
                "enabled": false,
              },
            },
            "id": "us.artifacts.j1-gc-integration-dev-v3.appspot.com",
            "kind": "storage#bucket",
            "location": "US",
            "locationType": "multi-region",
            "metageneration": "1",
            "name": "us.artifacts.j1-gc-integration-dev-v3.appspot.com",
            "projectNumber": "167984947943",
            "rpo": "DEFAULT",
            "selfLink": "https://www.googleapis.com/storage/v1/b/us.artifacts.j1-gc-integration-dev-v3.appspot.com",
            "storageClass": "STANDARD",
            "timeCreated": "2021-05-31T16:35:42.461Z",
            "updated": "2021-05-31T16:35:42.461Z",
          },
        },
      ],
      "_type": "google_storage_bucket",
      "access": "Subject to object ACLs",
      "classification": null,
      "createdOn": 1622478942461,
      "displayName": "us.artifacts.j1-gc-integration-dev-v3.appspot.com",
      "encrypted": true,
      "encryptionKeyRef": undefined,
      "etag": "CAE=",
      "id": "us.artifacts.j1-gc-integration-dev-v3.appspot.com",
      "kmsKeyName": undefined,
      "location": "US",
      "name": "us.artifacts.j1-gc-integration-dev-v3.appspot.com",
      "public": true,
      "retentionDate": undefined,
      "retentionPeriod": undefined,
      "retentionPolicyEnabled": undefined,
      "storageClass": "STANDARD",
      "uniformBucketLevelAccess": false,
      "updatedOn": 1622478942461,
      "versioningEnabled": false,
      "webLink": "https://console.cloud.google.com/storage/browser/us.artifacts.j1-gc-integration-dev-v3.appspot.com;tab=objects?forceOnBucketsSortingFiltering=false&project=j1-gc-integration-dev-v3",
    },
    {
      "_class": [
        "Logs",
      ],
      "_key": "google_logging_log_sink:my-instance-sink",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "createTime": "2021-05-31T16:25:55.464642273Z",
            "description": "an example sink",
            "destination": "storage.googleapis.com/j1-gc-integration-dev-v3-sink-logging-bucket",
            "name": "my-instance-sink",
            "updateTime": "2021-05-31T16:25:55.464642273Z",
            "writerIdentity": "serviceAccount:cloud-logs@system.gserviceaccount.com",
          },
        },
      ],
      "_type": "google_logging_project_sink",
      "createdOn": 1622478355464,
      "description": "an example sink",
      "destination": "storage.googleapis.com/j1-gc-integration-dev-v3-sink-logging-bucket",
      "displayName": "my-instance-sink",
      "filter": undefined,
      "name": "my-instance-sink",
      "updatedOn": 1622478355464,
      "webLink": "https://console.cloud.google.com/logs/router?project=j1-gc-integration-dev-v3",
    },
    {
      "_class": [
        "Logs",
      ],
      "_key": "google_logging_log_sink:_Required",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "destination": "logging.googleapis.com/projects/j1-gc-integration-dev-v3/locations/global/buckets/_Required",
            "filter": "LOG_ID("cloudaudit.googleapis.com/activity") OR LOG_ID("externalaudit.googleapis.com/activity") OR LOG_ID("cloudaudit.googleapis.com/system_event") OR LOG_ID("externalaudit.googleapis.com/system_event") OR LOG_ID("cloudaudit.googleapis.com/access_transparency") OR LOG_ID("externalaudit.googleapis.com/access_transparency")",
            "name": "_Required",
          },
        },
      ],
      "_type": "google_logging_project_sink",
      "createdOn": undefined,
      "destination": "logging.googleapis.com/projects/j1-gc-integration-dev-v3/locations/global/buckets/_Required",
      "displayName": "_Required",
      "filter": "LOG_ID("cloudaudit.googleapis.com/activity") OR LOG_ID("externalaudit.googleapis.com/activity") OR LOG_ID("cloudaudit.googleapis.com/system_event") OR LOG_ID("externalaudit.googleapis.com/system_event") OR LOG_ID("cloudaudit.googleapis.com/access_transparency") OR LOG_ID("externalaudit.googleapis.com/access_transparency")",
      "name": "_Required",
      "updatedOn": undefined,
      "webLink": "https://console.cloud.google.com/logs/router?project=j1-gc-integration-dev-v3",
    },
    {
      "_class": [
        "Logs",
      ],
      "_key": "google_logging_log_sink:_Default",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "destination": "logging.googleapis.com/projects/j1-gc-integration-dev-v3/locations/global/buckets/_Default",
            "filter": "NOT LOG_ID("cloudaudit.googleapis.com/activity") AND NOT LOG_ID("externalaudit.googleapis.com/activity") AND NOT LOG_ID("cloudaudit.googleapis.com/system_event") AND NOT LOG_ID("externalaudit.googleapis.com/system_event") AND NOT LOG_ID("cloudaudit.googleapis.com/access_transparency") AND NOT LOG_ID("externalaudit.googleapis.com/access_transparency")",
            "name": "_Default",
          },
        },
      ],
      "_type": "google_logging_project_sink",
      "createdOn": undefined,
      "destination": "logging.googleapis.com/projects/j1-gc-integration-dev-v3/locations/global/buckets/_Default",
      "displayName": "_Default",
      "filter": "NOT LOG_ID("cloudaudit.googleapis.com/activity") AND NOT LOG_ID("externalaudit.googleapis.com/activity") AND NOT LOG_ID("cloudaudit.googleapis.com/system_event") AND NOT LOG_ID("externalaudit.googleapis.com/system_event") AND NOT LOG_ID("cloudaudit.googleapis.com/access_transparency") AND NOT LOG_ID("externalaudit.googleapis.com/access_transparency")",
      "name": "_Default",
      "updatedOn": undefined,
      "webLink": "https://console.cloud.google.com/logs/router?project=j1-gc-integration-dev-v3",
    },
  ],
  "collectedRelationships": [],
  "encounteredTypes": [
    "google_storage_bucket",
    "google_logging_project_sink",
  ],
  "numCollectedEntities": 13,
  "numCollectedRelationships": 0,
}
`;
